crates/edgezero-macros/tests/ui/secret_with_serde_rename.stderr
error: `#[secret]` is incompatible with `#[serde(rename)]` — the derive emits the Rust field name verbatim and config validate / push round-trip it via TOML
 --> tests/ui/secret_with_serde_rename.rs:6:5
  |
6 |     #[serde(rename = "token")]
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
